--- a/staff_login/staff_login.html
+++ b/staff_login/staff_login.html
@@ -10,6 +10,8 @@
 <br />
 <form method="post" action="staff_login_check.php">
 スタッフコード<br />
+<input type="text" name="code"><br />
+パスワード<br />
 <input type="password" name="pass"><br />
 <br />
 <input type="submit" value="ログイン">
