--- a/asobi/gakunen.html
+++ b/asobi/gakunen.html
@@ -8,7 +8,15 @@
 <body>
     <form method="post" action="gakunen.php">
         あなたは何年生？<br />
-    <input type="text" name="gakunen"><br />
+    <!-- <input type="text" name="gakunen"><br /> -->
+    <!-- プルダウンに変更 -->
+    <select name="gakunen">
+        <option value="">選択</option>
+        <option value=1>1年</option>
+        <option value=2>2年</option>
+        <option value=3>3年</option>
+        <option value=4>それ以外</option>
+    </select>
     <input type="submit" value="OK">
     </form>
 </body>
