--- a/php_study/shop/shop_form.html
+++ b/php_study/shop/shop_form.html
@@ -20,7 +20,7 @@
     電話番号<br />
     <input type="text" name="tel" style="width:150px"><br /><br />
     <input type="button" onclick="history.back()" value="戻る">
-    <input type="submit" value="OK"><br />
+    <input type="submit" value="確認"><br />
 </form>
 
 </body>
